--- a/DairyManagementSystem/.github/workflows/dotnet-build.yml
+++ b/DairyManagementSystem/.github/workflows/dotnet-build.yml
@@ -28,11 +28,8 @@ jobs:
     - name: Publish Windows-x64
       run: dotnet publish src/DairyManagement.UI/DairyManagement.UI.csproj -c Release -r win-x64 --self-contained true -o ./publish/win-x64
 
-    - name: Publish Linux-x64
-      run: dotnet publish src/DairyManagement.UI/DairyManagement.UI.csproj -c Release -r linux-x64 --self-contained true -o ./publish/linux-x64
-
     - name: Upload Build Artifacts
       uses: actions/upload-artifact@v4
       with:
-        name: release-builds
-        path: ./publish/
+        name: DairyManagement-Windows-v1.1.0
+        path: ./publish/win-x64/
