--- a/.github/workflows/dotnet-build.yml
+++ b/.github/workflows/dotnet-build.yml
@@ -20,13 +20,13 @@ jobs:
         dotnet-version: '8.0.x'
 
     - name: Restore Dependencies
-      run: dotnet restore DairyManagementSystem.sln
+      run: dotnet restore DairyManagementSystem/DairyManagementSystem.sln
 
     - name: Build Solution
-      run: dotnet build DairyManagementSystem.sln -c Release --no-restore
+      run: dotnet build DairyManagementSystem/DairyManagementSystem.sln -c Release --no-restore
 
     - name: Publish Windows-x64
-      run: dotnet publish src/DairyManagement.UI/DairyManagement.UI.csproj -c Release -r win-x64 --self-contained true -o ./publish/win-x64
+      run: dotnet publish DairyManagementSystem/src/DairyManagement.UI/DairyManagement.UI.csproj -c Release -r win-x64 --self-contained true -o ./publish/win-x64
 
     - name: Upload Build Artifacts
       uses: actions/upload-artifact@v4
