--- a/.github/workflows/dotnet-build.yml
+++ b/.github/workflows/dotnet-build.yml
@@ -28,7 +28,7 @@ jobs:
       run: dotnet build DairyManagementSystem/DairyManagementSystem.sln -c Release --no-restore
 
     - name: Publish Windows-x64
-      run: dotnet publish DairyManagementSystem/src/DairyManagement.UI/DairyManagement.UI.csproj -c Release -r win-x64 --self-contained true -o ./publish/win-x64
+      run: dotnet publish DairyManagementSystem/src/DairyManagement.UI/DairyManagement.UI.csproj -c Release -r win-x64 --self-contained true -p:PublishSingleFile=true -p:IncludeNativeLibrariesForSelfExtract=true -o ./publish/win-x64
 
     - name: Upload Build Artifacts
       uses: actions/upload-artifact@v4
